; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_main.c_say_next_line.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_main.c_say_next_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vc_data = type { i32, i64 }

@spk_parked = common dso_local global i32 0, align 4
@spk_y = common dso_local global i32 0, align 4
@edge_bottom = common dso_local global i32 0, align 4
@spk_pos = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vc_data*)* @say_next_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @say_next_line(%struct.vc_data* %0) #0 {
  %2 = alloca %struct.vc_data*, align 8
  store %struct.vc_data* %0, %struct.vc_data** %2, align 8
  %3 = load i32, i32* @spk_parked, align 4
  %4 = or i32 %3, 1
  store i32 %4, i32* @spk_parked, align 4
  %5 = load i32, i32* @spk_y, align 4
  %6 = load %struct.vc_data*, %struct.vc_data** %2, align 8
  %7 = getelementptr inbounds %struct.vc_data, %struct.vc_data* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = sub nsw i32 %8, 1
  %10 = icmp eq i32 %5, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.vc_data*, %struct.vc_data** %2, align 8
  %13 = load i32, i32* @edge_bottom, align 4
  %14 = call i32 @announce_edge(%struct.vc_data* %12, i32 %13)
  br label %27

15:                                               ; preds = %1
  %16 = load i32, i32* @spk_y, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* @spk_y, align 4
  %18 = load %struct.vc_data*, %struct.vc_data** %2, align 8
  %19 = getelementptr inbounds %struct.vc_data, %struct.vc_data* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load i32, i32* @spk_pos, align 4
  %22 = sext i32 %21 to i64
  %23 = add nsw i64 %22, %20
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* @spk_pos, align 4
  %25 = load %struct.vc_data*, %struct.vc_data** %2, align 8
  %26 = call i32 @say_line(%struct.vc_data* %25)
  br label %27

27:                                               ; preds = %15, %11
  ret void
}

declare dso_local i32 @announce_edge(%struct.vc_data*, i32) #1

declare dso_local i32 @say_line(%struct.vc_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
